Ozhaev Zaynudin Sharik3.cpp.g++log.txt
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:2:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp: In function 'void ControlBall(int, int, int*, int*)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:101:34: error: invalid type argument of unary '*' (have 'int')
             txSetColor     (RGB(*x,   *y,   150), 2);
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:101:40: error: invalid type argument of unary '*' (have 'int')
             txSetColor     (RGB(*x,   *y,   150), 2);
                                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:102:34: error: invalid type argument of unary '*' (have 'int')
             txSetFillColor (RGB(*x/2, *y/2, 150));
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:102:40: error: invalid type argument of unary '*' (have 'int')
             txSetFillColor (RGB(*x/2, *y/2, 150));
                                        ^
---------------------------------------------------------------------------------------------
[03.06.2021 18:19:11,78 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
